--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Toboolist</title>
 </head>
 <body>
     <!-- intestazione della pagina -->
-    <header>
-
+    <header class="container">
+        <img id="logo" src="img/Logo.png" alt="logo">
+        <h1 id="scritta">Toboolist</h1>
     </header>
 
     <!-- corpo della pagina -->
