--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
     </header>
 
     <!-- corpo della pagina -->
-    <main>
+    <main id="pagina">
 
     </main>
 
-    <!-- fine della pagina -->
-    <footer>
-        
-    </footer>
+    <!-- fine corpo della pagina -->
+    
 </body>
 </html>
