--- a/index.html
+++ b/index.html
@@ -15,10 +15,33 @@
     </header>
 
     <!-- corpo della pagina -->
-    <main id="pagina">
+    <main>
+        <section>
+            <nav>
+                <button class="blu" type="button" >Add Task</button>
+                <button class="white" type="button" >Add Section</button>
+            </nav>
+            <hr class="linea">
+        </section>
 
+        
+
+        <section>
+            <h2>New Task</h2>
+            <h4>Quarterly Newsletter</h4>
+        </section>
+        <section>
+            <h2>Today</h2>
+            <h4>Recuiting blog post</h4>
+            <h4>Mobile app luanch</h4>
+            <h4>Interview John H.</h4>
+            <h4>Summit update to mobile storefronts</h4>
+        </section>
+        <section>
+            <h2>Upcoming</h2>
+            <h4>Schedule meeting with Alex</h4>
+        </section>
     </main>
-
     <!-- fine corpo della pagina -->
     
 </body>
