update botton iniziali

--- a/index.html
+++ b/index.html
@@ -18,50 +18,49 @@
     <main>
         <section>
             <nav>
-                <button class="blu" type="button">Add Task</button>
-                <button class="white" type="button" >Add Section</button>
+                <button id="first-button" class="blu" type="button">Add Task</button>
+                <button id="first-button" class="white" type="button" >Add Section</button>
             </nav>
             <hr class="linea">
         </section>
 
         <section>
             <h2>New Task</h2>
-            <h4>Quarterly Newsletter</h4>
-            <nav>
-                <button class="blu" type="button">Editorial</button>
+            <h4> &#10004; Quarterly Newsletter</h4>
+            <nav><button class="blu" type="button">Editorial</button></span>
             </nav>
         </section>
         <section>
             <h2>Today</h2>
-            <h4>Recuiting blog post</h4>
+            <h4>&#x2714; Recuiting blog post</h4>
             <nav>
                 <button class="blu" type="button">Editorial</button>
             </nav>
-            <h4>Mobile app luanch</h4>
+            <h4>&#x2714; Mobile app luanch</h4>
             <nav>
                 <button class="viola" type="button">Q1 Goals</button>
             </nav>
-            <h4>Interview John H.</h4>
+            <h4>&#x2718; Interview John H.</h4>
             <nav>
                 <button class="verde" type="button">Recruting</button>
             </nav>
-            <h4>Summit update to mobile storefronts</h4>
+            <h4>&#x2714; Summit update to mobile storefronts</h4>
             <nav>
                 <button class="arancio" type="button">Mobile</button>
             </nav>
         </section>
         <section>
             <h2>Upcoming</h2>
-            <h4>Schedule meeting with Alex</h4>
-            <h4>Hompega refresh</h4>
+            <h4>&#x2718; Schedule meeting with Alex</h4>
+            <h4>&#x2714;Hompega refresh</h4>
             <nav>
                 <button class="rosa" type="button">Website</button>
             </nav>
-            <h4>Onboard new Sales team members</h4>
+            <h4>&#x2714; Onboard new Sales team members</h4>
             <nav>
                 <button class="lime" type="button">Sales</button>
             </nav>
-            <h4>Review editorial calendar</h4>
+            <h4>&#x2714; Review editorial calendar</h4>
             <nav>
                 <button class="blu" type="button">Editorial</button>
             </nav>
