--- a/index.html
+++ b/index.html
@@ -25,46 +25,65 @@
         </section>
 
         <section>
-            <h2>New Task</h2>
-            <h4> &#10004; Quarterly Newsletter</h4>
-            <nav><button class="blu" type="button">Editorial</button></span>
-            </nav>
+            <h2> &#9660; New Task</h2>
+            <div class="row">
+                <span class="tondo">&#10004;</span>
+                <span>  Quarterly Newsletter</span>
+                    <button class="blu" type="button">Editorial</button>
+            </div>
         </section>
         <section>
-            <h2>Today</h2>
-            <h4>&#x2714; Recuiting blog post</h4>
-            <nav>
-                <button class="blu" type="button">Editorial</button>
-            </nav>
-            <h4>&#x2714; Mobile app luanch</h4>
-            <nav>
-                <button class="viola" type="button">Q1 Goals</button>
-            </nav>
-            <h4>&#x2718; Interview John H.</h4>
-            <nav>
-                <button class="verde" type="button">Recruting</button>
-            </nav>
-            <h4>&#x2714; Summit update to mobile storefronts</h4>
-            <nav>
+            <h2> &#9660; Today</h2>
+            <div class="row">
+                <span class="tondo">&#10004;</span>
+                <span> Recuiting blog post</span>
+                    <button class="blu" type="button">Editorial</button>
+            </div>
+            <br><!-- a capo -->
+            <div class="row">
+                <span class="tondo">&#10004;</span>
+                <span> Mobile app luanch</span>
+                    <button class="viola" type="button">Q1 Goals</button>
+            </div>
+            <br><!-- a capo -->
+            <div class="row">
+                <span class="tondo-red">&#x2718;</span>
+                <span> Interview John H.</span>
+                    <button class="verde" type="button">Recruting</button>
+            </div>
+            <br><!-- a capo -->
+            <div class="row">
+                <span class="tondo">&#x2714;</span>
+                <span> Summit update to mobile storefronts</span>
                 <button class="arancio" type="button">Mobile</button>
-            </nav>
+            </div>
         </section>
+
         <section>
-            <h2>Upcoming</h2>
-            <h4>&#x2718; Schedule meeting with Alex</h4>
-            <h4>&#x2714;Hompega refresh</h4>
-            <nav>
+            <h2> &#9660; Upcoming</h2>
+            <div class="row">
+                <span class="tondo-red">&#x2718;</span>
+                <span> Schedule meeting with Alex</span>
+            </div>
+            <br><!-- a capo -->
+            <div class="row">
+                <span class="tondo">&#x2714;</span>
+                <span> Hompega refresh</span>
                 <button class="rosa" type="button">Website</button>
-            </nav>
-            <h4>&#x2714; Onboard new Sales team members</h4>
-            <nav>
-                <button class="lime" type="button">Sales</button>
-            </nav>
-            <h4>&#x2714; Review editorial calendar</h4>
-            <nav>
-                <button class="blu" type="button">Editorial</button>
-            </nav>
-        </section>
+            </div>
+            <br><!-- a capo -->
+            <div class="row">
+                <span class="tondo">&#x2714;</span>
+                <span> Onboard new Sales team members</span>
+                    <button class="lime" type="button">Sales</button>
+            </div>
+            <br><!-- a capo -->
+            <div class="row">
+                <span class="tondo">&#x2714;</span>
+                <span> Review editorial calendar</span>
+                    <button class="blu" type="button">Editorial</button>
+            </div>
+         </section>
     </main>
     <!-- fine corpo della pagina -->
     
